[package]
name = "libetebase"
description = "C library for etebase"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/libetebase/"
version = "0.3.1"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "LGPL-2.1-only"
readme = "README.md"

[lib]
name = "etebase"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "^0.14.2"

[dependencies]
etebase = { git = "https://github.com/etesync/etebase-rs", rev = "b3aad3e01fd602f3547e0af82d3bf1b5701b79a2" }
